syntax = "proto3";

option csharp_namespace = "ToDoGrpc.Server";

import "google/api/annotations.proto";

package todoit;

service ToDoIt {
  // Create
  rpc CreateToDo(CreateToDoRequest) returns (CreateToDoResponse) {
    option (google.api.http) = {
      post: "/v1/todo",
      body: "*"
    };
  }

  // Get Item
  rpc GetToDoItem(GetToDoItemRequest) returns (GetToDoItemResponse) {
    option (google.api.http) = {
      get: "/v1/todo/{id}"
    };
  }

  // Get List
  rpc GetToDoList(GetToDoListRequest) returns (GetToDoListResponse) {
    option (google.api.http) = {
      get: "/v1/todo"
    };
  }

  // Update
  rpc UpdateToDo(UpdateToDoRequest) returns (UpdateToDoResponse) {
    option (google.api.http) = {
      put: "/v1/todo",
      body: "*"
    };
  }

  // Delete
  rpc DeleteToDo(DeleteToDoRequest) returns (DeleteToDoResponse) {
    option (google.api.http) = {
      delete: "/v1/todo/{id}"
    };
  }
}

message CreateToDoRequest {
  string title = 1;
  string description = 2;
}

message CreateToDoResponse {
  int32 id = 1;
}

message GetToDoItemRequest {
  int32 id = 1;
}

message GetToDoItemResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  bool is_complete = 4;
}

message GetToDoListRequest { }

message GetToDoListResponse {
  repeated GetToDoItemResponse items = 1;
}

message UpdateToDoRequest {
  int32 id = 1;
  string title = 2;
  string description = 3;
  bool is_complete = 4;
}

message UpdateToDoResponse {
  bool success = 1;
}

message DeleteToDoRequest {
  int32 id = 1;
}

message DeleteToDoResponse {
  bool success = 1;
}